# uv_demo

./: hello.py  pyproject.toml  requirements.txt
lab1/: README.md
lab1/A/: pyproject.toml  setup.py
lab1/A/A/: a.py
lab1/B/: pyproject.toml  setup.py
lab1/B/B/: b.py
lab1/C/: pyproject.toml
lab1/C/C/: c.py
lab2/: README.md  pyproject.toml  requirements.txt  timeit.bat
lab2/src/lab2/: __init__.py  hello.py
lab3/quote/: pyproject.toml
lab3/quote/src/quote/: quote_module.py
lab3/web/: app.py  pyproject.toml
quote/src/quote/: __init__.py
web/: pyproject.toml
