[project]
name = "uv-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.8.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cowsay==6.1",
    "flask==3.0.3",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "markupsafe==2.1.5",
    "opencc==1.1.9",
    "requests==2.32.3",
    "urllib3==2.2.3",
    "werkzeug==3.0.6",
    "zipp==3.20.2",
]

[tool.uv.workspace]
members = ["test"]
