[project]
name = "lab2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jack Liu", email = "jack.liu@ibm.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cowsay>=6.1",
    "requests>=2.32.3",
]

[project.scripts]
lab2 = "lab2:main"
hello = "lab2:hello_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
web = [
    "flask>=3.1.0",
]
